[tool.poetry]
name = "ocpp2twc"
version = "1.0.0"
description = "OCPP to Tesla Wall Connector bridge"
authors = ["Jan Berdel"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ocpp = "^0.14.1"
websockets = ">=10.4,<11.0"
async-timeout = "^4.0.2"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
